Squashed commit of the following:
commit a604acb2f69c961a89565ec511af5e4e6bcd43dd
Author: Mukhiddin Yusupov <mukhiddin_yusupov@epam.com>
Date:   Tue Dec 3 21:00:14 2024 +0500

    MODSOURCE-817: Fix data consistency in handling and updating Marc Bib records for links.instance-authority event (#652)

    - make the handling of events for instance-authority links so that no Marc Bib modifications from are lost due to concurrent nature of handling events
    - make sure the event of the first in a sequence of updates sent by the producer and then received by the consumer is handled before with persisting the changes of related bibs than the events produced/consumed later

    Closes: MODSOURCE-817